2016-04-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/tape_action.pl: Open a debug file

2016-04-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/diskfile.c (get_disklist): New function
	* server-src/diskfile.h (get_disklist): prototype

2016-04-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/tapefile.c (compute_retention): Fix if a dle is not in
	  the disklist

2016-04-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amstatus.pl: typo

2016-04-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_ClientService.pl: Fix for new DATA_FD_OFFSET
	  value

2016-04-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amanda.h, perl/Amanda/Constants.pm.in.src:Increase
	  DATA_FD_OFFSET to 150, it allow more paralled backup with bsd or
	  bsdudp auth

2016-04-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amgtar.c: Compare unescaped filename with the DAR
	  state file

2016-04-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c (sec_tcp_conn_read_callback): do not free
	  rc

2016-04-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/tape_action.pl: Fix test

2016-04-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c (promote_highest_priority_incremental): Was not
	  promote the correct ep (possible infinite loop)

2016-04-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c (split_quoted_strings_for_amstatus): New
	  function to parse a line for Amanda::Status
	* common-src/amutil.h (split_quoted_strings_for_amstatus): Add
	  protoype
	* perl/Amanda/Util.swg:Swig split_quoted_strings_for_amstatus
	* perl/Amanda/Status.pm: Use split_quoted_strings_for_amstatus

2016-04-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* packaging/deb/amanda-backup-client.install,
	  packaging/deb/amanda-backup-server.install: Add etc/amanda/*
